--- a/css/home.css
+++ b/css/home.css
@@ -1,3 +1,26 @@
 /*
  * Qui ci vanno tutte le modifiche della home
  */
+#home {
+    padding: 100px 0;
+}
+
+#pic-me {
+    margin: 30px 10px;
+    width:455px; /*width of your image*/
+    height:330px;
+}
+
+#hi {
+    margin: 10px;
+}
+
+#hi .title {
+    font-weight: 700;
+    font-size: 48px;
+}
+
+#riassunto {
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
