--- a/css/page.css
+++ b/css/page.css
@@ -3,7 +3,7 @@
  */
 
 html, body {
-	height: 100%;
+	height: 100% !important;
 	display: block;
 }
 
@@ -47,15 +47,12 @@ li {
 	background: none repeat scroll 0 0 #26292E;
 	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
 	height: 60px;
-	width: 100%;
-	left: 0;
-	top: 0;
 	z-index: 1001;
 }
 
 .page {
 	background: none repeat scroll 0 0 #2F3238;
-	padding: 100px 0;
+	padding: 100px;
     position: relative;
     z-index: 99;
     color: #7F8289;
@@ -65,4 +62,13 @@ li {
 	background: none repeat scroll 0 0 #26292E;
 	padding: 100px 0;
 	z-index: 99;
+}
+
+#home, #about {
+    height: auto;
+    width: auto;
+}
+
+strong {
+    color: #c0392b;
 }
