--- a/css/skills.css
+++ b/css/skills.css
@@ -28,6 +28,7 @@
     line-height:35px;
     color:#fff;
     margin-bottom:1px;
+    margin-right: 100px;
     font-size:20px;
 }
 
@@ -53,6 +54,14 @@
 
 .skills .java {
     background: #2980b9;
+}
+
+.skills .csh {
+    background: #bdc3c7;
+}
+
+.skills .assembly {
+    background: #e67e22;
 }
 
 .get {
