--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,60 @@
----
-layout: default
----
-<h2>{{ page.title }}</h2>
-<p class="meta">{{ page.date | date_to_string }}</p>
-
-<div class="post">
-{{ content }}
-</div>
+<!DOCTYPE html>
+<html>
+    <head>
+      <title>Domenico Luciani | DLion ~ Blog | {{ page.title }}</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- Bootstrap -->
+        <link href="{{ site.url }}/public/css/bootstrap.min.css" rel="stylesheet" media="screen">
+        <link href='http://fonts.googleapis.com/css?family=Roboto:300,400,500,700' rel='stylesheet' type='text/css'>
+        <link href="{{ site.url }}/public/css/page.css" rel="stylesheet" media="screen">
+        <link href="{{ site.url }}/public/css/blog.css" rel="stylesheet" media="screen">
+        <link href="{{ site.url }}/public/css/syntax2.css" rel="stylesheet" media="screen">
+    </head>
+    <body>
+        <header>
+        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="{{site.url}}/">Domenico Luciani | <strong>DLion ~ Blog</strong></a>
+        </div>
+        <div class="collapse navbar-collapse navbar-ex1-collapse">
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="{{ site.url}}/blog">Blog</a></li>
+                <li><a href="{{ site.url }}/">About me</a></li>
+            </ul>
+        </div>
+        </nav>
+        </header>
+        <div id="blog-testata" class="page">
+          <div class="row">
+            <div class="col-xs-12">
+              <h1 class="text-center"><span class="site-name">Domenico Luciani</span> | <strong>DLion ~ Blog</strong></h1>
+            </div>
+          </div>
+        </div>
+        <div id="blog-corpo" class="page-alternate">
+          <div class="container">
+            <div class="col-lg-9 col-lg-offset-2 center">
+              <h2 class="title-post">{{ page.title }}</h2>
+            </div>
+            <div class="col-lg-2 col-lg-offset-2 center">
+              <p>{{ page.date | date_to_string }}</p>
+            </div>
+            <div class="col-lg-9 col-lg-offset-2 center content">
+              {{content}}
+            </div>
+          </div>
+        </div>
+        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+        <script src="{{site.url}}/public/js/jquery.min.js" type="text/javascript"></script>
+        <!-- Include all compiled plugins (below), or include individual files as needed -->
+        <script src="{{site.url}}/public/js/bootstrap.min.js" type="text/javascript"></script>
+    </body>
+</html>
