--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -39,7 +39,7 @@
             </div>
           </div>
         </div>
-        <div id="blog-corpo" class="page-alternate">
+        <div id="blog-corpo" class="page-alternate-blog">
           <div class="container">
             <div class="col-lg-9 col-lg-offset-2 center">
               <h2 class="title-post">{{ page.title }}</h2>
