--- a/public/css/page.css
+++ b/public/css/page.css
@@ -44,16 +44,14 @@ li {
 
 .navbar {
 	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
-	min-height: 60px;
-	z-index: 1001;
 }
 
 .page {
 	background: none repeat scroll 0 0 #2F3238;
 	padding: 100px;
-    position: relative;
-    z-index: 99;
-    color: #7F8289;
+  position: relative;
+  z-index: 99;
+  color: #7F8289;
 }
 
 .page-alternate {
@@ -61,10 +59,18 @@ li {
 	padding: 100px 0;
 	z-index: 99;
 }
+.page-alternate-blog {
+	background: none repeat scroll 0 0 #26292E;
+	z-index: 99;
+}
 
 #home, #about, #skills, #social, #blog {
     height: auto;
     width: auto;
+}
+
+.navbar-nav > li > a {
+  padding-right: 30px;
 }
 
 strong {
