--- a/public/css/syntax2.css
+++ b/public/css/syntax2.css
@@ -1,33 +1,30 @@
-.highlight {
-  background-color: #34495e;
-  padding: 7px 7px 7px 10px;
-  margin: 20px 0 20px 0;
-  overflow: hidden;
+.highlight,pre {
+  background-color: #000000;
+  font-family: 'Roboto', sans-serif;
 }
-
-.highlight .c { color: #586E75 } /* Comment */
+.highlight .c { color: #2980b9 } /* Comment */
 .highlight .err { color: #93A1A1 } /* Error */
-.highlight .g { color: #93A1A1 } /* Generic */
-.highlight .k { color: #859900 } /* Keyword */
-.highlight .l { color: #93A1A1 } /* Literal */
-.highlight .n { color: #93A1A1 } /* Name */
-.highlight .o { color: #859900 } /* Operator */
-.highlight .x { color: #CB4B16 } /* Other */
-.highlight .p { color: #93A1A1 } /* Punctuation */
-.highlight .cm { color: #586E75 } /* Comment.Multiline */
-.highlight .cp { color: #859900 } /* Comment.Preproc */
-.highlight .c1 { color: #586E75 } /* Comment.Single */
-.highlight .cs { color: #859900 } /* Comment.Special */
-.highlight .gd { color: #2AA198 } /* Generic.Deleted */
-.highlight .ge { color: #93A1A1; font-style: italic } /* Generic.Emph */
+.highlight .g { color: #bdc3c7 } /* Generic */
+.highlight .k { color: #c0392b } /* Keyword */
+.highlight .l { color: #ecf0f1 } /* Literal */
+.highlight .n { color: #ecf0f1 } /* Name */
+.highlight .o { color: #76b03a } /* Operator */
+.highlight .x { color: #ecf0f1  } /* Other */
+.highlight .p { color: #ecf0f1} /* Punctuation */
+.highlight .cm { color: #2980b9 } /* Comment.Multiline */
+.highlight .cp { color: #54b53a } /* Comment.Preproc */
+.highlight .c1 { color: #2980b9 } /* Comment.Single */
+.highlight .cs { color: #2980b9 } /* C1A1omment.Special */
+.highlight .gd { color: #ecf0f1 } /* Generic.Deleted */
+.highlight .ge { color: #ecf0f1 ;  font-style: italic } /* Generic.Emph */
 .highlight .gr { color: #DC322F } /* Generic.Error */
-.highlight .gh { color: #CB4B16 } /* Generic.Heading */
-.highlight .gi { color: #859900 } /* Generic.Inserted */
-.highlight .go { color: #93A1A1 } /* Generic.Output */
-.highlight .gp { color: #93A1A1 } /* Generic.Prompt */
-.highlight .gs { color: #93A1A1; font-weight: bold } /* Generic.Strong */
-.highlight .gu { color: #CB4B16 } /* Generic.Subheading */
-.highlight .gt { color: #93A1A1 } /* Generic.Traceback */
+.highlight .gh { color: #ecf0f1 } /* Generic.Heading */
+.highlight .gi { color: #ecf0f1 } /* Generic.Inserted */
+.highlight .go { color: #ecf0f1 } /* Generic.Output */
+.highlight .gp { color: #ecf0f1 } /* Generic.Prompt */
+.highlight .gs { color: #ecf0f1; font-weight: bold } /* Generic.Strong */
+.highlight .gu { color: #ecf0f1 } /* Generic.Subheading */
+.highlight .gt { color: #ecf0f1 } /* Generic.Traceback */
 .highlight .kc { color: #CB4B16 } /* Keyword.Constant */
 .highlight .kd { color: #268BD2 } /* Keyword.Declaration */
 .highlight .kn { color: #859900 } /* Keyword.Namespace */
@@ -35,8 +32,8 @@
 .highlight .kr { color: #268BD2 } /* Keyword.Reserved */
 .highlight .kt { color: #DC322F } /* Keyword.Type */
 .highlight .ld { color: #93A1A1 } /* Literal.Date */
-.highlight .m { color: #2AA198 } /* Literal.Number */
-.highlight .s { color: #2AA198 } /* Literal.String */
+.highlight .m { color: #a17739 } /* Literal.Number */
+.highlight .s { color: #f1c40f } /* Literal.String */
 .highlight .na { color: #93A1A1 } /* Name.Attribute */
 .highlight .nb { color: #B58900 } /* Name.Builtin */
 .highlight .nc { color: #268BD2 } /* Name.Class */
@@ -44,7 +41,7 @@
 .highlight .nd { color: #268BD2 } /* Name.Decorator */
 .highlight .ni { color: #CB4B16 } /* Name.Entity */
 .highlight .ne { color: #CB4B16 } /* Name.Exception */
-.highlight .nf { color: #268BD2 } /* Name.Function */
+.highlight .nf { color: #7b277b} /* Name.Function */
 .highlight .nl { color: #93A1A1 } /* Name.Label */
 .highlight .nn { color: #93A1A1 } /* Name.Namespace */
 .highlight .nx { color: #555 } /* Name.Other */
@@ -53,14 +50,14 @@
 .highlight .nv { color: #268BD2 } /* Name.Variable */
 .highlight .ow { color: #859900 } /* Operator.Word */
 .highlight .w { color: #93A1A1 } /* Text.Whitespace */
-.highlight .mf { color: #2AA198 } /* Literal.Number.Float */
-.highlight .mh { color: #2AA198 } /* Literal.Number.Hex */
-.highlight .mi { color: #2AA198 } /* Literal.Number.Integer */
-.highlight .mo { color: #2AA198 } /* Literal.Number.Oct */
-.highlight .sb { color: #586E75 } /* Literal.String.Backtick */
-.highlight .sc { color: #2AA198 } /* Literal.String.Char */
+.highlight .mf { color: #a17739 } /* Literal.Number.Float */
+.highlight .mh { color: #a17739 } /* Literal.Number.Hex */
+.highlight .mi { color: #a17739 } /* Literal.Number.Integer */
+.highlight .mo { color: #a17739 } /* Literal.Number.Oct */
+.highlight .sb { color: #c36ab4 #586E75 } /* Literal.String.Backtick */
+.highlight .sc { color:  } /* Literal.String.Char */
 .highlight .sd { color: #93A1A1 } /* Literal.String.Doc */
-.highlight .s2 { color: #2AA198 } /* Literal.String.Double */
+.highlight .s2 { color: #a17739 } /* Literal.String.Double */
 .highlight .se { color: #CB4B16 } /* Literal.String.Escape */
 .highlight .sh { color: #93A1A1 } /* Literal.String.Heredoc */
 .highlight .si { color: #2AA198 } /* Literal.String.Interpol */
@@ -72,4 +69,4 @@
 .highlight .vc { color: #268BD2 } /* Name.Variable.Class */
 .highlight .vg { color: #268BD2 } /* Name.Variable.Global */
 .highlight .vi { color: #268BD2 } /* Name.Variable.Instance */
-.highlight .il { color: #2AA198 } /* Literal.Number.Integer.Long */
+.highlight .il { color: #a17739 } /* Literal.Number.Integer.Long */
