--- a/public/css/syntax2.css
+++ b/public/css/syntax2.css
@@ -1,5 +1,5 @@
 .highlight,pre {
-  background-color: #000000;
+  background-color: #222;
   font-family: 'Roboto', sans-serif;
 }
 .highlight .c { color: #2980b9 } /* Comment */
@@ -41,7 +41,7 @@
 .highlight .nd { color: #268BD2 } /* Name.Decorator */
 .highlight .ni { color: #CB4B16 } /* Name.Entity */
 .highlight .ne { color: #CB4B16 } /* Name.Exception */
-.highlight .nf { color: #7b277b} /* Name.Function */
+.highlight .nf { color: #b079cb} /* Name.Function */
 .highlight .nl { color: #93A1A1 } /* Name.Label */
 .highlight .nn { color: #93A1A1 } /* Name.Namespace */
 .highlight .nx { color: #555 } /* Name.Other */
