Added some posts, moved files and fixed image width

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,12 +22,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{site.url}}/">Domenico Luciani | <strong>DLion ~ Blog</strong></a>
+            <a class="navbar-brand" href="/">Domenico Luciani | <strong>DLion ~ Blog</strong></a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="{{ site.url}}/blog">Blog</a></li>
-                <li><a href="{{ site.url }}/">About me</a></li>
+                <li class="active"><a href="/">Blog</a></li>
+                <li><a href="{{ site.url }}/about">About</a></li>
             </ul>
         </div>
         </nav>
