--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -41,15 +41,16 @@
         </div>
         <div id="blog-corpo" class="page-alternate-blog">
           <div class="container">
-            <div class="col-lg-9 col-lg-offset-2 center">
+            <div class="content">
+              <!--<div class="col-lg-9 col-lg-offset-2 center"> !-->
               <h2 class="title-post">{{ page.title }}</h2>
-            </div>
-            <div class="col-lg-2 col-lg-offset-2 center">
+           <!-- </div>
+            <div class="col-lg-2 col-lg-offset-2 center"> !-->
               <p>{{ page.date | date_to_string }}</p>
-            </div>
-            <div class="col-lg-9 col-lg-offset-2 center content">
+           <!-- </div>
+            <div class="col-lg-9 col-lg-offset-2 center content"> !-->
               {{content}}
-            </div>
+              <!--</div> !-->
           </div>
         </div>
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
