--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -41,18 +41,14 @@
         </div>
         <div id="blog-corpo" class="page-alternate-blog">
           <div class="container">
-            <div class="content">
-              <!--<div class="col-lg-9 col-lg-offset-2 center"> !-->
+            <div class="alto-post">
               <h2 class="title-post">{{ page.title }}</h2>
-           <!-- </div>
-            <div class="col-lg-2 col-lg-offset-2 center"> !-->
-              <p>{{ page.date | date_to_string }}</p>
-           <!-- </div>
-            <div class="col-lg-9 col-lg-offset-2 center content"> !-->
-              {{content}}
-              <!--</div> !-->
+              <p class="date-post">{{ page.date | date_to_string }}</p>
+            </div>
+              <div class="content">
+               {{content}}
+            </div>
           </div>
-        </div>
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="{{site.url}}/public/js/jquery.min.js" type="text/javascript"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
