--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -42,7 +42,7 @@
         <div id="blog-corpo" class="page-alternate-blog">
           <div class="container">
             <div class="alto-post">
-              <h2 class="title-post">{{ page.title }}</h2>
+              <h2 class="title-post-in">{{ page.title }}</h2>
               <p class="date-post">{{ page.date | date_to_string }}</p>
             </div>
               <div class="content">
