--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -45,10 +45,11 @@
               <h2 class="title-post-in">{{ page.title }}</h2>
               <p class="date-post">{{ page.date | date_to_string }}</p>
             </div>
-              <div class="content">
-               {{content}}
+            <div class="content">
+              {{content}}
             </div>
           </div>
+        </div>
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="{{site.url}}/public/js/jquery.min.js" type="text/javascript"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
