Fixed layout and syntax

--- a/public/css/page.css
+++ b/public/css/page.css
@@ -9,10 +9,9 @@ html, body {
 body {
 	font-family: 'Roboto', sans-serif;
 	font-weight: 400;
-	line-height: 28px;
 	font-size: 16px;
 	margin: 0;
-	color: #7F8289;
+  color: #BBBBBB;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -75,4 +74,9 @@ li {
 
 strong {
     color: #c0392b;
+}
+
+p {
+  margin: 0 0 1.2em;
+  line-height: 1.4em;
 }
