--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@
         <!-- Bootstrap -->
         <link href="{{ site.url }}/public/css/bootstrap.min.css" rel="stylesheet" media="screen">
         <link href='http://fonts.googleapis.com/css?family=Roboto:300,400,500,700' rel='stylesheet' type='text/css'>
-        <link href="/public/css/font-awesome.min.css" rel="stylesheet">
+        <link href="{{site.url}}/public/css/font-awesome.min.css" rel="stylesheet">
         <link href="{{ site.url }}/public/css/page.css" rel="stylesheet" media="screen">
         <link href="{{ site.url }}/public/css/blog.css" rel="stylesheet" media="screen">
         <link href="{{ site.url }}/public/css/syntax3.css" rel="stylesheet" media="screen">
@@ -17,6 +17,7 @@
         <meta property="og:type" content="article" />
         <meta property="article:published_time" content="{{page.date}}" />
         <meta property="article:author" content="{{site.url}}/">
+        <meta property="og:image" content="http://a.disquscdn.com/uploads/users/5012/6939/avatar92.jpg?1388511981"/>
     </head>
     <body>
         <header>
