Added meta tags

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,6 +18,8 @@
         <meta property="article:published_time" content="{{page.date}}" />
         <meta property="article:author" content="{{site.url}}/">
         <meta property="og:image" content="http://a.disquscdn.com/uploads/users/5012/6939/avatar92.jpg?1388511981"/>
+        <meta property="og:url" content="{{site.url}}{{page.url}}">
+        <meta name="twitter:url" content="{{site.url}}{{page.url}}">
     </head>
     <body>
         <header>
