--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,6 +11,7 @@
         <link href="{{ site.url }}/public/css/page.css" rel="stylesheet" media="screen">
         <link href="{{ site.url }}/public/css/blog.css" rel="stylesheet" media="screen">
         <link href="{{ site.url }}/public/css/syntax3.css" rel="stylesheet" media="screen">
+        <link rel="shortcut icon" href="{{site.url}}/favicon.ico"/>
         <meta property="og:title" content="{{page.title}}" />
         <meta property="description" content="{{page.excerpt}}" />
         <meta property="og:description" content="{{page.excerpt}}" />
