--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,6 +14,8 @@
         <link rel="shortcut icon" href="{{site.url}}/favicon.ico"/>
         <meta property="og:title" content="{{page.title}}" />
         <meta property="og:type" content="article" />
+        <meta property="description" content="{{page.description}}"/>
+        <meta property="og:description" content="{{page.description}}"/>
         <meta property="article:published_time" content="{{page.date}}" />
         <meta property="article:author" content="{{site.url}}/">
         <meta property="og:image" content="http://a.disquscdn.com/uploads/users/5012/6939/avatar92.jpg?1388511981"/>
