--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="it-IT" prefix="og: http://ogp.me/ns#">
     <head>
       <title>Domenico Luciani | DLion ~ Blog | {{ page.title }}</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="author" href="https://plus.google.com/+DomenicoLeoneLuciani/posts"/>
+        <!-- SEO -->
+        <link rel="canonical" href="{{site.url}}/" />
+        <link rel="shortcut icon" href="{{site.url}}/favicon.ico"/>
+        <meta property="og:locale" content="it_IT" />
+        <meta property="og:type" content="article" />
+        <meta property="og:title" content="Domenico Luciani | DLion ~ Blog | {{ page.title }}" />
+        <meta property="og:description" content="{{page.description}}" />
+        <meta property="og:url" content="{{site.url}}{{page.url}}" />
+        <meta property="og:site_name" content="Domenico Luciani | DLion ~ Blog | {{page.title}}" />
+        <meta property="og:image" content="{{site.url}}/public/img/pic.jpg" />
+        <meta name="twitter:url" content="{{site.url}}{{page.url}}">
+        <!-- FINE SEO -->
+
         <!-- Bootstrap -->
         <link href="{{ site.url }}/public/css/bootstrap.min.css" rel="stylesheet" media="screen">
         <link href='http://fonts.googleapis.com/css?family=Roboto:300,400,500,700' rel='stylesheet' type='text/css'>
@@ -11,16 +25,6 @@
         <link href="{{ site.url }}/public/css/page.css" rel="stylesheet" media="screen">
         <link href="{{ site.url }}/public/css/blog.css" rel="stylesheet" media="screen">
         <link href="{{ site.url }}/public/css/syntax3.css" rel="stylesheet" media="screen">
-        <link rel="shortcut icon" href="{{site.url}}/favicon.ico"/>
-        <meta property="og:title" content="{{page.title}}" />
-        <meta property="og:type" content="article" />
-        <meta property="description" content="{{page.description}}"/>
-        <meta property="og:description" content="{{page.description}}"/>
-        <meta property="article:published_time" content="{{page.date}}" />
-        <meta property="article:author" content="{{site.url}}/">
-        <meta property="og:image" content="http://a.disquscdn.com/uploads/users/5012/6939/avatar92.jpg?1388511981"/>
-        <meta property="og:url" content="{{site.url}}{{page.url}}">
-        <meta name="twitter:url" content="{{site.url}}{{page.url}}">
     </head>
     <body>
         <header>
