--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,15 +6,28 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="author" href="https://plus.google.com/+DomenicoLeoneLuciani/posts"/>
         <!-- SEO -->
-        <link rel="canonical" href="{{site.url}}/" />
-        <link rel="shortcut icon" href="{{site.url}}/favicon.ico"/>
+        <link rel="canonical" href="{{site.url}}{{page.url}}" />
+        <!-- Schema.org markup for Google+ -->
+        <meta itemprop="name" content="Domenico Luciani | DLion ~ Blog | {{page.title}}">
+        <meta itemprop="description" content="{{page.description}}">
+        <meta itemprop="image" content="{{site.url}}/public/img/pic.jpg">
+        <!-- Open Graph data -->
         <meta property="og:locale" content="it_IT" />
         <meta property="og:type" content="article" />
-        <meta property="og:title" content="Domenico Luciani | DLion ~ Blog | {{ page.title }}" />
+        <meta property="og:title" content="Domenico Luciani | DLion ~ Blog | {{page.title}}" />
         <meta property="og:description" content="{{page.description}}" />
         <meta property="og:url" content="{{site.url}}{{page.url}}" />
         <meta property="og:site_name" content="Domenico Luciani | DLion ~ Blog | {{page.title}}" />
         <meta property="og:image" content="{{site.url}}/public/img/pic.jpg" />
+        <!-- Twitter Card data -->
+        <meta name="twitter:card" value="summary">
+        <meta name="twitter:site" content="Domenico Luciani | DLion ~ Blog | {{page.title}}">
+        <meta name="twitter:title" content="Domenico Luciani | DLion ~ Blog | {{page.title}}">
+        <meta name="twitter:description" content="{{page.description}}">
+        <meta name="twitter:creator" content="Domenico Luciani aka DLion">
+        <meta name="twitter:creator:id" content="dlion92">
+        <meta name="twitter:image:src" content="{{site.url}}/public/img/pic.jpg">
+        <meta name="twitter:domain" content="{{site.url}}/">
         <meta name="twitter:url" content="{{site.url}}{{page.url}}">
         <!-- FINE SEO -->
 
