--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -85,7 +85,7 @@
             <div class="row">
               <div class="col-xs-12 col-md-8"></div>
               <div class="col-xs-6 col-md-4 sharing">
-                <a id="share" onclick="window.open(this.href, 'twitter-share', 'width=550,height=235'); return false;" href="http://twitter.com/share?text={{page.title}}&url={{site.url}}{{page.url}}"><i class="fa fa-twitter fa-2x"></i></a><a id="share" onclick="window.open(this.href, 'facebook-share', 'width=580, height=296'); return false;" href="https://www.facebook.com/sharer/sharer.php?u={{site.url}}{{page.url}}"><i class="fa fa-facebook-square fa-2x"></i></a><a id="share" onclick="window.open(this.href, 'google-plus-share', 'width=490, height=530'); return false;" href="https://plus.google.com/share?url={{site.url}}{{page.url}}"><i class="fa fa-google-plus-square fa-2x"></i></a>
+                  <a id="share" href="https://twitter.com/intent/tweet?url={{ site.url }}{{page.url}}&text={{page.title }}&via=dlion92" target="_blank"><i class="fa fa-twitter fa-2x"></i></a><a id="share" href="https://www.facebook.com/sharer/sharer.php?u={{site.url}}{{page.url}}" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a><a id="share" href="https://plus.google.com/share?url={{site.url}}{{page.url}}" target="_blank"><i class="fa fa-google-plus-square fa-2x"></i></a>
               </div>
             </div>
             <div id="disqus_thread"></div>
