--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,41 +6,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="author" href="https://plus.google.com/+DomenicoLeoneLuciani/posts"/>
     <!-- SEO -->
-    <link rel="canonical" href="{{site.url}}/{{page.url}}" />
+    <link rel="canonical" href="{{site.url}}{{page.url}}" />
     <!-- Schema.org markup for Google+ -->
     <meta itemprop="name" content="{{site.description_name}} | {{site.description_blog}} | {{page.title}}">
-    <meta itemprop="description" content="{{page.descr}}">
+    <meta itemprop="description" content="{{page.description}}">
     <meta itemprop="image" content="{{site.url}}/public/img/pic.jpg">
     <!-- Open Graph data -->
     <meta property="og:locale" content="it_IT" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="{{site.description_name}} | {{site.description_blog}} | {{page.title}}" />
-    <meta property="og:description" content="{{page.descr}}" />
-    <meta property="og:url" content="{{site.url}}/{{page.url}}" />
+    <meta property="og:description" content="{{page.description}}" />
+    <meta property="og:url" content="{{site.url}}{{page.url}}" />
     <meta property="og:site_name" content="{{site.description_name}} | {{site.description_blog}} | {{page.title}}" />
     <meta property="og:image" content="{{site.url}}/public/img/pic.jpg" />
     <!-- Twitter Card data -->
     <meta name="twitter:card" value="summary">
     <meta name="twitter:site" content="dlion92">
     <meta name="twitter:title" content="{{site.description_name}} | {{site.description_blog}} | {{page.title}}">
-    <meta name="twitter:description" content="{{page.descr}}">
+    <meta name="twitter:description" content="{{page.description}}">
     <meta name="twitter:creator" content="dlion92">
     <meta name="twitter:creator:id" content="dlion92">
     <meta name="twitter:image:src" content="{{site.url}}/public/img/pic.jpg">
-    <meta name="twitter:domain" content="{{site.url}}/{{page.url}}">
+    <meta name="twitter:domain" content="{{site.url}}{{page.url}}">
     <!-- FINE SEO -->
 
     <!-- FOUNDATION -->
     <link rel="stylesheet" href="/public/css/foundation.min.css" />
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,500,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/public/css/custom.css" />
+    <link rel="stylesheet" href="/public/css/syntax.css" />
+    <link rel="stylesheet" href="/public/foundation-icons/foundation-icons.css" />
     <script src="/public/js/vendor/modernizr.js"></script>
 </head>
 <body>
     <nav class="top-bar" data-topbar>
         <ul class="title-area">
             <li class="name">
-                <h1><a href="#"><span>{{site.description_name}}</span> | <span id="titolettoNavbar">{{site.description_blog}}</span></a></h1>
+                <h1><a href="#"><span class="element">{{site.description_name}}</span> | <span id="titolettoNavbar">{{site.description_blog}}</span></a></h1>
             </li>
              <li class="toggle-topbar menu-icon"><a href="#"></a></li>
         </ul>
@@ -48,7 +50,7 @@
             <ul class="right">
                 <li>
                     <a href="{{site.url}}/about">
-                        <span class="title-menutopbar">About</span>
+                        <span class="title-menutopbar element">About</span>
                     </a>
                 </li>
             </ul>
@@ -67,21 +69,59 @@
     <!-- Content -->
     <div class="row contentPost">
         <div class="show-for-small-only small-6 columns contentDataMobile">
-            <span>{{page.date | date_to_string}}</span>
+            <span class="element">{{page.date | date_to_string}}</span>
         </div>
         <div class="large-11 small-12 small-text-center columns contentTitoloPost">
             <h1>{{page.title}}</h1>
         </div>
         <div class="large-12 text-right columns contentDataDesktop show-for-medium-up">
-            <span>{{page.date | date_to_string}}</span>
+            <span class="element">{{page.date | date_to_string}}</span>
         </div>
         <div class="large-12 small-12 columns contentContentPost">
             {{content}}
         </div>
     </div>
+    <div class="row sharePost">
+        <div class="large-12 large-text-right columns">
+            <h3>Share this post...</h3>
+        </div>
+        <div id="share" class="large-3 large-text-center small-text-center columns">
+            <a href="https://twitter.com/intent/tweet?url={{ site.url }}{{page.url}}&text={{page.title }}&via=dlion92" target="_blank">
+                <i class="fi-social-twitter"></i>
+            </a>
+            <a href="https://www.facebook.com/sharer/sharer.php?u={{site.url}}{{page.url}}" target="_blank">
+                <i class="fi-social-facebook"></i>
+            </a>
+            <a href="https://plus.google.com/share?url={{site.url}}{{page.url}}" target="_blank">
+                <i class="fi-social-google-plus"></i>
+            </a>
+        </div>
+    </div>
+    <div class="row commentPost">
+        <div class="large-12 small-12 columns">
+            <div id="disqus_thread"></div>
+        </div>
+    </div>
+    <script type="text/javascript">
+        var disqus_shortname = 'dlion';
+        (function() {
+            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+        })();
+    </script>
 
-    <script src="public/js/vendor/jquery.js"></script>
-    <script src="public/js/foundation.min.js"></script>
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o)
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-40851910-1', 'dlion.it');
+        ga('send', 'pageview');
+    </script>
+
+    <script src="/public/js/vendor/jquery.js"></script>
+    <script src="/public/js/foundation.min.js"></script>
     <script>
         $(document).foundation();
     </script>
