--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -26,7 +26,7 @@ h4, h5, h6 {
     color: #C0392B;
 }
 
-span {
+.element {
     color: #999;
 }
 
@@ -56,8 +56,22 @@ a {
     color: #BBB;
 }
 
-pre code {
-    background-color: rgb(34, 34, 34);
+
+.highlight pre code * {
+  white-space: nowrap;
+}
+
+.highlight pre {
+  overflow-x: auto;
+}
+
+.highlight pre code {
+  white-space: pre;
+}
+
+.fi-social-facebook, .fi-social-twitter, .fi-social-google-plus {
+    font-size: 60px;
+    margin: 8px;
 }
 
 /* Large, XLarge */
@@ -108,6 +122,10 @@ pre code {
     .contentContentPost {
         margin-top: 50px;
     }
+    
+    .sharePost {
+        margin-bottom: 25px;
+    }
 }
 
 /* Mobile */
@@ -141,5 +159,9 @@ pre code {
     
     .contentTitoloPost h1 {
         margin-top: 5px;
+    }
+    
+    .sharePost {
+        margin: 30px 0 40px;
     }
 }
