--- a/public/css/syntax.css
+++ b/public/css/syntax.css
@@ -16,6 +16,7 @@ cyan      #2aa198  strings, numbers
 green     #859900  operators, other keywords
 */
 
+code { background-color: #002b36; color: #93a1a1 }
 .highlight { background-color: #002b36; color: #93a1a1 }
 .highlight .c { color: #586e75 } /* Comment */
 .highlight .err { color: #93a1a1 } /* Error */
