--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -37,6 +37,7 @@ h4, h5, h6 {
 a {
     font-style: none;
     color: #FFFFFF;
+    outline: 0;
 }
 
 #titoloNome a {
@@ -69,9 +70,15 @@ a {
   white-space: pre;
 }
 
-.fi-social-facebook, .fi-social-twitter, .fi-social-google-plus {
+.fi-social-facebook, 
+.fi-social-twitter, 
+.fi-social-google-plus {
     font-size: 60px;
     margin: 8px;
+}
+
+.footer {
+    background: none repeat scroll 0px 0px #2F3238;
 }
 
 /* Large, XLarge */
@@ -125,6 +132,28 @@ a {
     
     .sharePost {
         margin-bottom: 25px;
+    }
+    
+    .footer {
+        margin-top: 80px;
+        height: 180px;
+    }
+    
+    .iconsFooter {
+        margin-top: 15px;
+        margin-right: -110px;
+    }
+    
+    .iconsFooter .fi-mail,
+    .iconsFooter .fi-social-facebook,
+    .iconsFooter .fi-social-github,
+    .iconsFooter .fi-social-google-plus,
+    .iconsFooter .fi-social-twitter,
+    .iconsFooter .fi-social-stack-overflow,
+    .iconsFooter .fi-social-linkedin,
+    .iconsFooter .fi-social-skype {
+        font-size: 35px;
+        margin: 10px;
     }
 }
 
