--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -74,7 +74,7 @@
         <div class="large-11 small-12 small-text-center columns contentTitoloPost">
             <h1>{{page.title}}</h1>
         </div>
-        <div class="large-12 text-right columns contentDataDesktop show-for-medium-up">
+        <div class="large-12 text-right columns contentDataDesktop show-for-medium-up" id="{{page.category}}">
             <span class="element">{{page.date | date_to_string}}</span>
         </div>
         <div class="large-12 small-12 columns contentContentPost">
