--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -71,7 +71,7 @@
         <div class="show-for-small-only small-6 columns contentDataMobile">
             <span class="element">{{page.date | date_to_string}}</span>
         </div>
-        <div class="large-11 small-12 small-text-center columns contentTitoloPost">
+        <div class="large-11 small-12 small-text-center columns contentTitoloPost" id="{{page.category}}">
             <h1>{{page.title}}</h1>
         </div>
         <div class="large-12 text-right columns contentDataDesktop show-for-medium-up" id="{{page.category}}">
