--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -82,7 +82,32 @@
         </div>
     </div>
     <div class="row sharePost">
-        <div class="large-12 large-text-right columns">
+        <div class="large-4 large-text-left columns aboutMeFull">
+            <h4>Author</h4>
+            <div class="large-4 small-5 columns">
+                <img src="{{site.url}}/public/img/pic.jpg" width="90px"></img>
+            </div>
+            <div class="large-8 small-7 columns">
+                <ul class="large-block-grid-3 small-block-grid-3 contentAboutMePost">
+                    <li>
+                        <a href="https://github.com/DLion" target="_blank">
+                            <i class="fi-social-github"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://twitter.com/dlion92" target="_blank">
+                            <i class="fi-social-twitter"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://linkedin.com/in/dlion" target="_blank">
+                            <i class="fi-social-linkedin"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="large-8 large-text-right columns shareThisPostLabel">
             <h3>Share this post...</h3>
         </div>
         <div id="share" class="large-3 large-text-center small-text-center columns">
