--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -49,8 +49,13 @@
         <section class="top-bar-section">
             <ul class="right">
                 <li>
-                    <a href="{{site.url}}/about">
-                        <span class="title-menutopbar element">About</span>
+                    <a href="https://github.com/DLion" target="_blank">
+                        <span class="title-menutopbar element">Github</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://twitter.com/dlion92" target="_blank">
+                        <span class="title-menutopbar element">Twitter</span>
                     </a>
                 </li>
             </ul>
