--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -39,7 +39,7 @@
 
     <!-- FOUNDATION -->
     <link rel="stylesheet" href="/public/css/foundation.min.css" />
-    <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,500,700' rel='stylesheet' type='text/css'>
+    <link href='fonts.googleapis.com/css?family=Roboto:400,300,500,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/public/css/custom.css" />
     <link rel="stylesheet" href="/public/css/syntax.css" />
     <link rel="stylesheet" href="/public/foundation-icons/foundation-icons.css" />
